plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
}

group = 'su.grinev'
version = '0.1.10'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven {
        name = "GitHubPackages"
        url = uri("https://maven.pkg.github.com/GR-ROM/JBson")

        credentials {
            username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
            password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
        }
    }
}

publishing {
    publications {
        gpr(MavenPublication) {
            from components.java
            groupId = group
            artifactId = 'JBson'
            version = version
        }
    }

    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/GR-ROM/JBson")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
                password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
            }
        }
    }
}

dependencies {
// https://mvnrepository.com/artifact/org.projectlombok/lombok
    implementation("org.projectlombok:lombok:1.18.38")
    annotationProcessor 'org.projectlombok:lombok:1.18.38'

    testImplementation 'org.mongodb:bson:4.10.2'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            '--add-modules', 'jdk.incubator.vector'
    ]
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += [
            '--add-modules', 'jdk.incubator.vector'
    ]
}

test {
    useJUnitPlatform()
}